add dockefile to build image and update image in k8s nodejs-deployment.

--- a/node-app/k8s/nodejs-deployment.yml
+++ b/node-app/k8s/nodejs-deployment.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: <Image>
+        image: nodejs-app:latest
         ports:
         - containerPort: 9000
         env:
