--- a/node-app/package.json
+++ b/node-app/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.1",
     "express": "^5.1.0",
     "prisma": "^6.6.0",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   }
 }
