--- a/node-app/dockerfile
+++ b/node-app/dockerfile
@@ -8,7 +8,7 @@ COPY ./package* ./
 RUN npm install
 
 COPY . .
-RUN echo "🔗 DATABASE_URL is: $DATABASE_URL"
+RUN echo "DATABASE_URL is: $DATABASE_URL"
 RUN npx prisma db push
 RUN npx prisma generate
 RUN npm run build
