--- a/node-app/k8s/nodejs-deployment.yml
+++ b/node-app/k8s/nodejs-deployment.yml
@@ -14,8 +14,9 @@ spec:
       containers:
       - name: nodejs-app
         image: nodejs-app:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 9000
         env:
         - name: DATABASE_URL
-          value: "postgresql://myuser:mypassword@postgres:5432/mydatabase"
+          value: "postgresql://myuser:mypassword@postgres-service:5432/mydatabase"
