--- a/node-app/k8s/postgres-deployment.yml
+++ b/node-app/k8s/postgres-deployment.yml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 5432
         env:
         - name: POSTGRES_DB
-          value: mydatbase
+          value: mydatabase
         - name: POSTGRES_USER
           value: myuser
         - name: POSTGRES_PASSWORD
