Refactor Express app to use Pool from pg, initialize database table, and update Docker image version in Kubernetes manifests.

--- a/k8s-manual-ingress/ops/db/manifest.yml
+++ b/k8s-manual-ingress/ops/db/manifest.yml
@@ -16,7 +16,11 @@ spec:
       - name: db
         image: postgres:latest
         env:
+          - name: POSTGRES_USER
+            value: postgres
           - name: POSTGRES_PASSWORD
+            value: postgres
+          - name: POSTGRES_DB
             value: postgres
         ports:
         - containerPort: 5432
